--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-  "name": "v",
+  "name": "cc-hearts",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vite-ssg build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@cc-heart/eslint-config": "^0.0.5",
     "@cc-heart/utils": "^2.0.11",
-    "@intlify/unplugin-vue-i18n": "^0.10.0",
-    "@types/node": "^20.1.2",
-    "@types/vue-i18n": "^7.0.0",
-    "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "@vueuse/head": "^1.1.26",
-    "markdown-it-link-attributes": "^4.0.1",
-    "markdown-it-shiki": "^0.9.0",
     "nprogress": "^0.2.0",
-    "sass": "^1.62.1",
-    "unocss": "^0.51.8",
-    "vite-plugin-pages": "^0.29.0",
-    "vite-plugin-vue-markdown": "^0.23.4",
     "vue": "^3.2.47",
-    "vue-i18n": "^9.2.2",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "unocss": "^0.51.8"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.1.0",
     "typescript": "^5.0.2",
-    "vite": "link:@intlify/unplugin-vue-i18n/vite",
-    "vue-tsc": "^1.4.2"
+    "vue-tsc": "^1.4.2",
+    "vite": "^4.3.5",
+    "@vitejs/plugin-vue": "^4.1.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "vite-plugin-pages": "^0.29.0",
+    "vite-plugin-vue-markdown": "^0.23.4",
+    "vite-ssg": "^0.22.2",
+    "vite-ssg-sitemap": "^0.5.1",
+    "@vueuse/head": "^1.1.26",
+    "sass": "^1.62.1",
+    "@types/node": "^20.1.2",
+    "@types/vue-i18n": "^7.0.0",
+    "@cc-heart/eslint-config": "^0.0.5",
+    "markdown-it-shiki": "^0.9.0",
+    "markdown-it-link-attributes": "^4.0.1"
   }
 }
