--- a/package.json
+++ b/package.json
@@ -10,27 +10,28 @@
   },
   "dependencies": {
     "@cc-heart/utils": "^2.0.11",
+    "gray-matter": "^4.0.3",
     "nprogress": "^0.2.0",
+    "unocss": "^0.51.8",
     "vue": "^3.2.47",
-    "vue-router": "^4.2.0",
-    "unocss": "^0.51.8"
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.2",
-    "vue-tsc": "^1.4.2",
-    "vite": "^4.3.5",
+    "@cc-heart/eslint-config": "^0.0.5",
+    "@types/node": "^20.1.2",
+    "@types/vue-i18n": "^7.0.0",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "@vueuse/head": "^1.1.26",
+    "markdown-it-link-attributes": "^4.0.1",
+    "markdown-it-shiki": "^0.9.0",
+    "sass": "^1.62.1",
+    "typescript": "^5.0.2",
+    "vite": "^4.3.5",
     "vite-plugin-pages": "^0.29.0",
     "vite-plugin-vue-markdown": "^0.23.4",
     "vite-ssg": "^0.22.2",
     "vite-ssg-sitemap": "^0.5.1",
-    "@vueuse/head": "^1.1.26",
-    "sass": "^1.62.1",
-    "@types/node": "^20.1.2",
-    "@types/vue-i18n": "^7.0.0",
-    "@cc-heart/eslint-config": "^0.0.5",
-    "markdown-it-shiki": "^0.9.0",
-    "markdown-it-link-attributes": "^4.0.1"
+    "vue-tsc": "^1.4.2"
   }
 }
