chore: update default.conf

--- a/default.conf
+++ b/default.conf
@@ -7,7 +7,7 @@
     error_log  /var/log/nginx/error.log  error;
 
     location / {
-        root   /opt/cc-hearts/dist;
+        root   /opt/cc-hearts;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html =404;
     }
