--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite-ssg build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "fix": "eslint --fix --ext .js,.ts,.vue ."
   },
   "dependencies": {
     "@cc-heart/utils": "^2.0.11",
@@ -23,6 +24,7 @@
     "@vitejs/plugin-vue": "^4.1.0",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vueuse/head": "^1.1.26",
+    "eslint-plugin-vue": "^9.12.0",
     "markdown-it-link-attributes": "^4.0.1",
     "markdown-it-shiki": "^0.9.0",
     "sass": "^1.62.1",
