--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite-ssg build",
     "preview": "vite preview",
     "fix": "eslint --fix --ext .js,.ts,.vue ."
