--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@cc-heart/utils": "^2.0.11",
+    "@iconify-json/carbon": "^1.1.17",
     "@unhead/vue": "^1.1.27",
     "gray-matter": "^4.0.3",
     "nprogress": "^0.2.0",
