--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "vite --host",
     "build": "vite-ssg build",
     "preview": "vite preview",
+    "test": "vitest",
+    "matter": "ts-node-esm scripts/matter/index",
     "fix": "eslint --fix --ext .js,.ts,.vue .",
     "prettier": "prettier --write ."
   },
@@ -14,6 +16,7 @@
     "@cc-heart/utils": "^2.0.11",
     "@iconify-json/carbon": "^1.1.17",
     "@unhead/vue": "^1.1.27",
+    "glob": "^10.2.7",
     "gray-matter": "^4.0.3",
     "nprogress": "^0.2.0",
     "typed.js": "^2.0.16",
@@ -39,6 +42,7 @@
     "vite-plugin-vue-markdown": "^0.23.4",
     "vite-ssg": "^0.22.2",
     "vite-ssg-sitemap": "^0.5.1",
+    "vitest": "^0.32.2",
     "vue-tsc": "^1.4.2"
   }
 }
