--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@cc-heart/utils": "^2.0.11",
+    "@cc-heart/utils-client": "^0.0.12",
     "@iconify-json/carbon": "^1.1.17",
     "@unhead/vue": "^1.1.27",
     "glob": "^10.2.7",
