--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,16 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
+  ],
+  "headers": [
+    {
+      "source": "/(.*).js",
+      "headers": [
+        {
+          "key": "Content-type",
+          "value": "application/javascript"
+        }
+      ]
+    }
   ]
 }
