chore: update ci headers

--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
   ],
   "headers": [
     {
-      "source": "/js/(.*)",
+      "source": "/(.*)\\.js",
       "headers": [
         {
           "key": "Content-type",
