--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@cc-heart/utils": "^2.0.11",
     "@iconify-json/carbon": "^1.1.17",
     "@unhead/vue": "^1.1.27",
+    "github-slugger": "^2.0.0",
     "glob": "^10.2.7",
     "gray-matter": "^4.0.3",
+    "markdown-it-anchor": "^8.6.7",
+    "markdown-toc": "^1.2.0",
     "nprogress": "^0.2.0",
     "typed.js": "^2.0.16",
     "unocss": "^0.51.8",
