--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
+    "prepare": "husky install",
     "dev": "vite --host",
     "build": "vite-ssg build",
     "preview": "vite preview",
@@ -15,8 +16,7 @@
   "dependencies": {
     "@cc-heart/utils": "^4.0.0",
     "@iconify-json/carbon": "^1.1.18",
-    "@unhead/vue": "^1.1.33",
-    "github-slugger": "^2.0.0",
+    "@unhead/vue": "^1.2.2",
     "glob": "^10.3.3",
     "gray-matter": "^4.0.3",
     "markdown-it-anchor": "^8.6.7",
@@ -29,23 +29,28 @@
   },
   "devDependencies": {
     "@cc-heart/eslint-config": "^0.0.5",
-    "@types/node": "^20.4.5",
+    "@types/node": "^20.4.8",
     "@types/vue-i18n": "^7.0.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vueuse/head": "^1.1.26",
-    "eslint-plugin-vue": "^9.16.0",
+    "eslint-plugin-vue": "^9.16.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
     "markdown-it-link-attributes": "^4.0.1",
     "markdown-it-shiki": "^0.9.0",
     "prettier": "^2.8.8",
-    "sass": "^1.64.1",
+    "sass": "^1.64.2",
     "typescript": "^5.1.6",
-    "vite": "^4.4.7",
+    "vite": "^4.4.8",
     "vite-plugin-pages": "^0.29.1",
     "vite-plugin-vue-markdown": "^0.23.7",
     "vite-ssg": "^0.22.2",
     "vite-ssg-sitemap": "^0.5.1",
-    "vitest": "^0.32.4",
+    "vitest": "^0.34.1",
     "vue-tsc": "^1.8.8"
+  },
+  "lint-staged": {
+    "*.{vue,js,ts,jsx,tsx,json}": "eslint --fix"
   }
 }
