feat: add web-engineer docs

--- a/package.json
+++ b/package.json
@@ -51,7 +51,10 @@
     "vue-tsc": "^1.8.8"
   },
   "lint-staged": {
-    "*.{vue,js,ts,jsx,tsx,json,md}": "prettier --write .",
-    "*.{vue,js,ts,jsx,tsx,json}": "eslint --fix"
+    "*.{vue,js,ts,jsx,tsx,json}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{md}": "prettier --write"
   }
 }
