--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "push": "node bin/push.cjs"
   },
   "dependencies": {
-    "@cc-heart/utils": "^4.0.1",
-    "@iconify-json/carbon": "^1.1.20",
-    "@unhead/vue": "^1.3.9",
-    "glob": "^10.3.3",
+    "@cc-heart/utils": "^4.0.3",
+    "@iconify-json/carbon": "^1.1.21",
+    "@unhead/vue": "^1.7.4",
+    "glob": "^10.3.6",
     "gray-matter": "^4.0.3",
     "markdown-it-anchor": "^8.6.7",
     "markdown-toc": "^1.2.0",
@@ -27,15 +27,15 @@
     "typed.js": "^2.0.16",
     "unocss": "^0.51.13",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@cc-heart/eslint-config": "^0.0.5",
-    "@types/node": "^20.5.7",
+    "@types/node": "^20.6.4",
     "@types/vue-i18n": "^7.0.0",
-    "@vitejs/plugin-vue": "^4.3.3",
+    "@vitejs/plugin-vue": "^4.3.4",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
-    "@vitest/coverage-v8": "^0.34.3",
+    "@vitest/coverage-v8": "^0.34.5",
     "@vueuse/head": "^1.3.1",
     "eslint-plugin-vue": "^9.17.0",
     "husky": "^8.0.3",
@@ -43,15 +43,16 @@
     "markdown-it-link-attributes": "^4.0.1",
     "markdown-it-shiki": "^0.9.0",
     "prettier": "^2.8.8",
-    "sass": "^1.66.1",
+    "sass": "^1.68.0",
+    "ssh2": "^1.14.0",
     "typescript": "^5.2.2",
     "vite": "^4.4.9",
     "vite-plugin-pages": "^0.29.1",
     "vite-plugin-vue-markdown": "^0.23.8",
     "vite-ssg": "^0.22.2",
     "vite-ssg-sitemap": "^0.5.1",
-    "vitest": "^0.34.3",
-    "vue-tsc": "^1.8.8"
+    "vitest": "^0.34.5",
+    "vue-tsc": "^1.8.13"
   },
   "lint-staged": {
     "*.{vue,js,ts,jsx,tsx,json}": [
