--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,9 @@
   server {
-    listen       80;
-    server_name  _;
+    listen 443 ssl;
+    server_name  www.cc-heart.cn;
+
+    ssl_certificate /etc/nginx/ssl/ssl.pem;
+    ssl_certificate_key /etc/nginx/ssl/ssl.key;
 
     #charset koi8-r;
     access_log  /var/log/nginx/host.access.log  main;
@@ -16,4 +19,10 @@
     location = /50x.html {
         root   html;
     }
+}
+
+server {
+    listen 80;
+    server_name  www.cc-heart.cn;
+    return 301 https://$server_name$request_uri;
 }
