--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "cc-hearts",
+  "name": "cc-heart",
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "author": "cc heart",
   "scripts": {
     "prepare": "husky install",
     "dev": "vite --host",
@@ -13,20 +14,21 @@
     "zhlint:fix": "ts-node-esm scripts/lint/zh-lint.ts",
     "fix": "eslint --fix --ext .js,.ts,.vue .",
     "prettier": "prettier --write .",
+    "header": "ts-node-esm scripts/header/gen-header.ts",
     "push": "node bin/push.cjs",
     "exports": "npx gen-index-export"
   },
   "dependencies": {
-    "@cc-heart/utils": "^4.0.6",
+    "@cc-heart/utils": "^4.1.5",
     "@iconify-json/carbon": "^1.1.21",
-    "@unhead/vue": "^1.8.3",
+    "@unhead/vue": "^1.8.8",
     "glob": "^10.3.10",
     "gray-matter": "^4.0.3",
     "markdown-it-anchor": "^8.6.7",
     "markdown-toc": "^1.2.0",
     "nprogress": "^0.2.0",
     "reading-time": "^1.5.0",
-    "typed.js": "^2.0.16",
+    "typed.js": "^2.1.0",
     "unocss": "^0.51.13",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
@@ -34,9 +36,9 @@
   "devDependencies": {
     "@cc-heart/eslint-config": "^0.0.5",
     "@cc-heart/gen-index-export": "^1.0.1",
-    "@types/node": "^20.9.0",
-    "@vitejs/plugin-vue": "^4.4.0",
-    "@vitejs/plugin-vue-jsx": "^3.0.2",
+    "@types/node": "^20.10.0",
+    "@vitejs/plugin-vue": "^4.5.0",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vitest/coverage-v8": "^0.34.6",
     "@vueuse/head": "^1.3.1",
     "compressing": "^1.10.0",
@@ -48,7 +50,7 @@
     "prettier": "^2.8.8",
     "sass": "^1.69.5",
     "ssh2": "^1.14.0",
-    "typescript": "^5.2.2",
+    "typescript": "^5.3.2",
     "vite": "^4.5.0",
     "vite-plugin-pages": "^0.29.1",
     "vite-plugin-vue-markdown": "^0.23.8",
