feat(plugins): support hot update import markdown link config

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "vitest run --coverage",
     "matter": "ts-node-esm scripts/matter/index.ts",
     "zhlint:fix": "ts-node-esm scripts/lint/zh-lint.ts",
-    "fix": "eslint --fix --ext .js,.ts,.vue .",
+    "eslint:fix": "eslint --fix --ext .js,.ts,.vue .",
+    "gen:lint:format": "npm run matter && npm run header && npm run zhlint:fix && npm run eslint:fix && npm run prettier",
     "prettier": "prettier --write .",
     "header": "ts-node-esm scripts/header/gen-header.ts",
     "push": "node bin/push.cjs",
