--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@cc-heart/eslint-config": "^0.0.5",
     "@cc-heart/gen-index-export": "^1.0.1",
+    "@cc-heart/utils-service": "^3.0.0",
     "@types/node": "^20.10.0",
     "@vitejs/plugin-vue": "^4.5.0",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
