chore: update deps
chore: update deps

chore: update deps

--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "build": "vite-ssg build",
     "preview": "vite preview",
     "test": "vitest run --coverage",
-    "matter": "ts-node-esm scripts/matter/index.ts",
-    "zhlint:fix": "ts-node-esm scripts/lint/zh-lint.ts",
+    "matter": "node --loader ts-node/esm scripts/matter/index.ts",
+    "zhlint:fix": "node --loader ts-node/esm scripts/lint/zh-lint.ts",
     "eslint:fix": "eslint --fix --ext .js,.ts,.vue .",
     "gen:lint:format": "npm run matter && npm run header && npm run zhlint:fix && npm run eslint:fix && npm run prettier",
     "prettier": "prettier --write .",
-    "header": "ts-node-esm scripts/header/gen-header.ts",
+    "header": "node --loader ts-node/esm scripts/header/gen-header.ts",
     "push": "node bin/push.cjs",
     "exports": "npx gen-index-export"
   },
@@ -52,6 +52,7 @@
     "prettier": "^2.8.8",
     "sass": "^1.69.6",
     "ssh2": "^1.15.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vite": "^4.5.1",
     "vite-plugin-pages": "^0.29.1",
